--- a/install.yml
+++ b/install.yml
@@ -3,9 +3,18 @@
   become: yes
   gather_facts: yes
 
-  roles:
-    - role: elastic.elasticsearch
-      es_version: 5.6.3
-      es_instance_name: "node1"
-#      otherwise it hangs on TASK [elastic.elasticsearch : Wait for elasticsearch to startup]
-      es_heap_size: "512m"
+#  roles:
+#    - role: elastic.elasticsearch
+#      es_version: 5.6.3
+#      es_instance_name: "node1"
+##      otherwise it hangs on TASK [elastic.elasticsearch : Wait for elasticsearch to startup]
+#      es_heap_size: "512m"
+
+  tasks:
+    - name: update host file
+      blockinfile:
+        path: /etc/hosts
+        block: |
+          10.0.15.21 node1
+          10.0.15.22 node2
+          10.0.15.23 node3
