add ping setup to readme

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
-10.0.15.21
-10.0.15.22
-10.0.15.23
+node1 ansible_ssh_host=10.0.15.21 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
+node2 ansible_ssh_host=10.0.15.22 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
+node3 ansible_ssh_host=10.0.15.23 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
 
 
