--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -27,25 +27,44 @@
 #  gather_facts: yes
 #
 #  roles:
-#    - { role: elastic.elasticsearch, es_version: 5.6.3, es_instance_name: "node2", es_heap_size: "512m",
+#    - { role: elastic.elasticsearch,
+#        es_version: 5.6.3,
+#        es_instance_name: "node2",
+#        es_data_dirs: "/opt/elasticsearch/data",
+#        es_log_dir: "/opt/elasticsearch/logs",
 #        es_config: {
+#          node.name: "node1",
 #          cluster.name: "demo",
-#          discovery.zen.ping.unicast.hosts: "node1:9302, node3:9303",
-#          http.port: 9202,
-#          transport.tcp.port: 9302,
+#          discovery.zen.ping.unicast.hosts: "node1:9300, node3:9300",
+##          discovery.zen.minimum_master_nodes: 2,
+#          http.port: 9200,
+#          transport.tcp.port: 9300,
+#          bootstrap.memory_lock: false
 #        }
 #      }
-
+#  vars:
+#    es_heap_size: "512m"
+#
+#
 #- hosts: node3
 #  become: yes
 #  gather_facts: yes
 #
 #  roles:
-#    - { role: elastic.elasticsearch, es_version: 5.6.3, es_instance_name: "node3", es_heap_size: "512m",
+#    - { role: elastic.elasticsearch,
+#        es_version: 5.6.3,
+#        es_instance_name: "node3",
+#        es_data_dirs: "/opt/elasticsearch/data",
+#        es_log_dir: "/opt/elasticsearch/logs",
 #        es_config: {
+#          node.name: "node3",
 #          cluster.name: "demo",
-#          discovery.zen.ping.unicast.hosts: "node1:9302, node2:9303",
-#          http.port: 9203,
-#          transport.tcp.port: 9303,
+#          discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300",
+##          discovery.zen.minimum_master_nodes: 2,
+#          http.port: 9200,
+#          transport.tcp.port: 9300,
+#          bootstrap.memory_lock: false
 #        }
 #      }
+#  vars:
+#    es_heap_size: "512m"
