--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -12,7 +12,7 @@
         es_config: {
           node.name: "node1",
           cluster.name: "demo",
-          network.host: "_enp0s8_",
+#          network.host: "_enp0s8:ipv4_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
 #          discovery.zen.minimum_master_nodes: 2,
           http.port: 9200,
@@ -37,7 +37,7 @@
           node.name: "node1",
           cluster.name: "demo",
           # waits here until it times out TASK [elastic.elasticsearch : Wait for elasticsearch to startup]
-          network.host: "_enp0s8_",
+#          network.host: "_enp0s8:ipv4_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
 #          discovery.zen.minimum_master_nodes: 2,
           http.port: 9200,
@@ -62,7 +62,7 @@
         es_config: {
           node.name: "node3",
           cluster.name: "demo",
-          network.host: "_enp0s8_",
+#          network.host: "_enp0s8:ipv4_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
 #          discovery.zen.minimum_master_nodes: 2,
           http.port: 9200,
