--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -12,7 +12,7 @@
         es_config: {
           node.name: "node1",
           cluster.name: "demo",
-#          network.host: "_enp0s8:ipv4_",
+          network.host: "_enp0s8:ipv4_, _local_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
 #          discovery.zen.minimum_master_nodes: 2,
           http.port: 9200,
@@ -34,10 +34,10 @@
         es_data_dirs: "/opt/elasticsearch/data",
         es_log_dir: "/opt/elasticsearch/logs",
         es_config: {
-          node.name: "node1",
+          node.name: "node2",
           cluster.name: "demo",
           # waits here until it times out TASK [elastic.elasticsearch : Wait for elasticsearch to startup]
-#          network.host: "_enp0s8:ipv4_",
+          network.host: "_enp0s8:ipv4_, _local_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
 #          discovery.zen.minimum_master_nodes: 2,
           http.port: 9200,
@@ -62,7 +62,7 @@
         es_config: {
           node.name: "node3",
           cluster.name: "demo",
-#          network.host: "_enp0s8:ipv4_",
+          network.host: "_enp0s8:ipv4_, _local_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
 #          discovery.zen.minimum_master_nodes: 2,
           http.port: 9200,
