--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,4 @@
+[nodes]
 node1 ansible_ssh_host=172.28.128.11 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
 node2 ansible_ssh_host=172.28.128.12 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
 node3 ansible_ssh_host=172.28.128.13 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
