--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -1,66 +1,17 @@
 ---
-- hosts: node1
+- hosts: nodes
   become: yes
   gather_facts: yes
+  serial: 1
 
   roles:
     - { role: elastic.elasticsearch,
         es_version: 5.6.3,
-        es_instance_name: "node1",
+        es_instance_name: "{{ ansible_hostname }}",
         es_data_dirs: "/opt/elasticsearch/data",
         es_log_dir: "/opt/elasticsearch/logs",
         es_config: {
-          node.name: "node1",
-          cluster.name: "demo",
-          network.host: "_enp0s8:ipv4_, _local_",
-          discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
-          discovery.zen.minimum_master_nodes: 2,
-          http.port: 9200,
-          transport.tcp.port: 9300,
-          bootstrap.memory_lock: false
-        }
-      }
-  vars:
-    es_heap_size: "1g"
-
-- hosts: node2
-  become: yes
-  gather_facts: yes
-
-  roles:
-    - { role: elastic.elasticsearch,
-        es_version: 5.6.3,
-        es_instance_name: "node2",
-        es_data_dirs: "/opt/elasticsearch/data",
-        es_log_dir: "/opt/elasticsearch/logs",
-        es_config: {
-          node.name: "node2",
-          cluster.name: "demo",
-          # waits here until it times out TASK [elastic.elasticsearch : Wait for elasticsearch to startup]
-          network.host: "_enp0s8:ipv4_, _local_",
-          discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
-          discovery.zen.minimum_master_nodes: 2,
-          http.port: 9200,
-          transport.tcp.port: 9300,
-          bootstrap.memory_lock: false
-        }
-      }
-  vars:
-    es_heap_size: "1g"
-
-
-- hosts: node3
-  become: yes
-  gather_facts: yes
-
-  roles:
-    - { role: elastic.elasticsearch,
-        es_version: 5.6.3,
-        es_instance_name: "node3",
-        es_data_dirs: "/opt/elasticsearch/data",
-        es_log_dir: "/opt/elasticsearch/logs",
-        es_config: {
-          node.name: "node3",
+          node.name: "{{ ansible_hostname }}",
           cluster.name: "demo",
           network.host: "_enp0s8:ipv4_, _local_",
           discovery.zen.ping.unicast.hosts: "node1:9300, node2:9300, node3:9300",
