--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -2,6 +2,7 @@
 - hosts: elasticsearch_nodes
   become: yes
   gather_facts: yes
+#  ansible-playbook elasticsearch.yml  49.53s user 17.50s system 15% cpu 7:10.62 total
   serial: 1
 
   roles:
@@ -23,3 +24,24 @@
       }
   vars:
     es_heap_size: "1g"
+    es_enable_xpack: true,
+    es_xpack_features:
+      - security
+    es_api_basic_auth_username: rdeniro
+    es_api_basic_auth_password: goodfellas
+    es_users:
+      file:
+        rdeniro:
+          password: goodfellas
+          roles:
+            - admin
+    es_roles:
+      file:
+        admin:
+          cluster:
+            - all
+          indices:
+            - names: '*'
+              privileges:
+                - all
+
