--- a/inventory.ini
+++ b/inventory.ini
@@ -3,4 +3,5 @@ node1 ansible_ssh_host=172.28.128.11 ansible_ssh_user=vagrant ansible_ssh_privat
 node2 ansible_ssh_host=172.28.128.12 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
 node3 ansible_ssh_host=172.28.128.13 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
 
-
+[kibana_nodes]
+kibana ansible_ssh_host=172.28.128.14 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
