--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,7 @@
 - src: https://github.com/elastic/ansible-elasticsearch
   version: 5.5.1
   name: elastic.elasticsearch
+
+- src: https://github.com/geerlingguy/ansible-role-kibana
+  version: 2.0.1
+  name: geerlingguy.kibana
