--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -18,6 +18,10 @@
           network.host: "{{ inventory_hostname }}, _local_",
           discovery.zen.ping.unicast.hosts: "{{ ansible_play_hosts | join(', ') }}",
           discovery.zen.minimum_master_nodes: 2,
+#          xpack.security.authc.realms.file1.type: "file",
+#          xpack.security.authc.realms.file1.order: 0,
+#          xpack.security.authc.realms.native1.type: "native",
+#          xpack.security.authc.realms.native1.order: 1,
           http.port: 9200,
           transport.tcp.port: 9300,
           bootstrap.memory_lock: false
@@ -28,10 +32,15 @@
     es_enable_xpack: true,
     es_xpack_features:
       - security
-    es_api_basic_auth_username: admin
-    es_api_basic_auth_password: verysecret
+    es_api_basic_auth_username: test
+    es_api_basic_auth_password: secret
     es_users:
       file:
+        test:
+          password: secret
+          roles:
+            - file_admin
+      native:
         admin:
           password: verysecret
           roles:
@@ -46,6 +55,14 @@
             - edorasone
     es_roles:
       file:
+        file_admin:
+          cluster:
+            - all
+          indices:
+            - names: '*'
+              privileges:
+                - all
+      native:
         admin:
           cluster:
             - all
