--- a/kibana.yml
+++ b/kibana.yml
@@ -1,7 +1,17 @@
 - hosts: kibana_nodes
   roles:
-    - { role: geerlingguy.kibana,
-        kibana_version: 5.6.3,
-        kibana_elasticsearch_url: "http://node1:9200"
-    }
+    - role: sansible.kibana
+      kibana:
+        host: kibana
+        install_dir: /usr/share/kibana/
+        tarball: kibana-5.6.3-linux-x86_64
+        download_base_url: https://artifacts.elastic.co/downloads/kibana/
+        version: 5.6.3
+        port: 5601
+        plugins: []
+        elasticsearch:
+          host: node1
+          port: 9200
 
+# currently the x-pack was installed manually on it
+# not sure how to expose the service to the host
