--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -26,6 +26,8 @@
   vars:
     es_heap_size: "512m"
     es_enable_xpack: true,
+    es_plugins:
+      - plugin: mapper-attachments
     es_xpack_features:
       - security
     es_api_basic_auth_username: admin
