--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -2,9 +2,6 @@
 - hosts: elasticsearch_nodes
   become: yes
   gather_facts: yes
-#  ansible-playbook elasticsearch.yml  49.53s user 17.50s system 15% cpu 7:10.62 total
-#  serial: 1
-#  ansible-playbook elasticsearch.yml  42.10s user 18.16s system 31% cpu 3:08.93 total
 
   roles:
     - { role: elastic.elasticsearch,
@@ -30,14 +27,9 @@
       - plugin: mapper-attachments
     es_xpack_features:
       - security
-    es_api_basic_auth_username: admin
-    es_api_basic_auth_password: secret
+    es_api_basic_auth_username: elastic
+    es_api_basic_auth_password: changeme
     es_users:
-      file:
-        admin:
-          password: secret
-          roles:
-            - admin
       native:
         dataloader:
           password: mimacom
@@ -48,14 +40,6 @@
           roles:
             - edorasone
     es_roles:
-      file:
-        admin:
-          cluster:
-            - all
-          indices:
-            - names: '*'
-              privileges:
-                - all
       native:
         dataloader:
           cluster:
